Font size and section spacing fix

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -40,7 +40,7 @@ body::-webkit-scrollbar {
 }
 
 section {
-  margin: 160px 0;
+  margin: 180px 0;
 }
 
 .loader {
